<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<androidx.camera.view.PreviewView
		android:id="@+id/previewView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scaleType="fitCenter">

	</androidx.camera.view.PreviewView>

	<ImageView
		android:id="@+id/frontCameraOverlayImageView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#CCFFFFFF"
		android:contentDescription="@string/front_camera_flash_light" />

	<TextView
		android:id="@+id/speechTextView"
		android:layout_width="111dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="@android:dimen/app_icon_size"
		android:background="@drawable/textview_border"
		android:gravity="center|center_horizontal"
		android:textColor="#000000"
		android:textStyle="bold"
		android:visibility="invisible" />

	<com.seetext.utils.GraphicOverlay
		android:id="@+id/graphicOverlay"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

	<Spinner
		android:id="@+id/languageSpinner"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_gravity="bottom|right"
		android:background="@color/colorPrimary"
		android:spinnerMode="dialog"
		android:textColor="#FFFFFF"
		android:visibility="invisible"
		tools:ignore="RtlHardcoded" />

	<ImageView
		android:id="@+id/userProfileImageView"
		android:layout_width="66dp"
		android:layout_height="51dp"
		app:srcCompat="@drawable/user_profile"
		android:contentDescription="@string/user_profile" />

	<ImageView
        android:id="@+id/cameraModeImageView"
        android:layout_width="66dp"
        android:layout_height="51dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/camera_mode"
		android:contentDescription="@string/camera_mode"
		tools:ignore="RtlHardcoded" />

	<ImageView
		android:id="@+id/flashLightImageView"
		android:layout_width="30dp"
		android:layout_height="35dp"
		android:layout_gravity="right"
		android:layout_marginTop="65dp"
		android:layout_marginRight="19dp"
		app:srcCompat="@drawable/flash_light"
		android:contentDescription="@string/flash_light"
		tools:ignore="RtlHardcoded" />

	<ImageView
		android:id="@+id/languagesImageView"
		android:layout_width="56dp"
		android:layout_height="51dp"
		android:layout_gravity="bottom|right"
		android:layout_marginTop="85dp"
		android:contentDescription="@string/languages"
		app:srcCompat="@drawable/languages"
		tools:ignore="RtlHardcoded" />

	<TextView
		android:id="@+id/languageTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|right"
		android:layout_marginRight="7dp"
		android:layout_marginBottom="51dp"
		android:background="@android:drawable/editbox_dropdown_light_frame"
		android:text="@string/english"
		android:textColor="#000000"
		android:textSize="12sp"
		tools:ignore="RtlHardcoded" />

	<ImageView
		android:id="@+id/audioImageView"
		android:layout_width="45dp"
		android:layout_height="35dp"
		android:layout_gravity="bottom|right"
		android:layout_marginRight="60dp"
		android:layout_marginBottom="10dp"
		android:contentDescription="@string/audio"
		android:visibility="invisible"
		app:srcCompat="@drawable/tts_audio"
		tools:ignore="RtlHardcoded" />

	<TextView
		android:id="@+id/inputLanguageTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|right"
		android:layout_marginRight="7dp"
		android:layout_marginBottom="136dp"
		android:background="@android:drawable/editbox_dropdown_light_frame"
		android:text="@string/english"
		android:textColor="#000000"
		android:textSize="12sp"
		tools:ignore="RtlHardcoded" />

	<ImageView
		android:id="@+id/swapLanguageImageView"
		android:layout_width="56dp"
		android:layout_height="51dp"
		android:layout_gravity="bottom|right"
		android:layout_marginBottom="82dp"
		app:srcCompat="@drawable/swap_language" />

	<ImageView
		android:id="@+id/faceCheckImageView"
		android:layout_width="56dp"
		android:layout_height="51dp"
		android:layout_gravity="bottom"
		android:layout_marginStart="5dp"
		android:visibility="invisible"
		app:srcCompat="@drawable/face_check"
		android:contentDescription="@string/face_detection_check" />

	<ImageView
		android:id="@+id/speechDetectionImageView"
		android:layout_width="66dp"
		android:layout_height="51dp"
		android:layout_gravity="bottom"
		app:srcCompat="@drawable/speech_detection"
		android:contentDescription="@string/speech_detection" />

	<ImageView
		android:id="@+id/objectDetectionImageView"
		android:layout_width="66dp"
		android:layout_height="51dp"
		android:layout_gravity="bottom"
		android:layout_marginStart="65dp"
		app:srcCompat="@drawable/objects_detection"
		android:contentDescription="@string/object_detection" />

	<include layout="@layout/loading_overlay" />

</FrameLayout>