<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.profile.ProfileActivity" >

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/user_profile_dark"
		android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/ownLanguageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top|left"
        android:paddingLeft="10dp"
        android:paddingTop="140dp"
        android:text="@string/choose_your_language"
        android:textSize="20sp"
		tools:ignore="RtlHardcoded,RtlSymmetry" />

	<TextView
		android:id="@+id/subOwnLanguageTextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|top|left"
		android:paddingLeft="11dp"
		android:paddingTop="165dp"
		android:text="@string/used_for_your_microphone_speech"
		android:textSize="14sp"
		android:textStyle="bold"
		tools:ignore="RtlHardcoded,RtlSymmetry" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/save" />

	<ScrollView
    android:id="@+id/languagesScrollView"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="top"
	android:layout_marginTop="190dp"
	android:layout_marginBottom="50dp" >

		<RadioGroup
			android:id="@+id/languagesRadioGroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="top"
			android:layout_marginBottom="50dp" />

	</ScrollView>

</FrameLayout>